--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,3 +1,4 @@
+
 /* == RESETS == */
 
 * {
@@ -5,4 +6,11 @@
     padding: 0;
     font-size: 10px;
     font-weight: 400;
+}
+
+
+/* == LAYOUT - Heights == */
+
+.title {
+    height: 5rem;
 }
