--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,5 +1,5 @@
 
-/* == RESETS == */
+/* ==  RESETS  == */
 
 * {
     margin: 0;
@@ -9,7 +9,9 @@
 }
 
 
-/* == LAYOUT - Heights == */
+/* ==  LAYOUT  == */
+
+/* ====  Heights  ==== */
 
 .title {
     height: 5rem;
@@ -21,3 +23,8 @@
     height: 15rem;
 }
 
+/* ====  Widths  ==== */
+
+.title {
+    width: 100%;
+}
