--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -18,6 +18,17 @@
     font-size: 3rem;
 }
 
+.brushes h2,
+.frames h2,
+.paint h2 {
+    font-size: 2.5rem;
+}
+
+.brushes h3,
+.frames h3,
+.paint h3 {
+    font-size: 1.5rem;
+}
 
 
 
@@ -46,3 +57,23 @@
 .title {
     text-align: center;
 }
+
+
+/* ==  VIEWPORTS  == */
+
+/* ====  Small  ==== */
+
+@media (max-width: 640px) {
+
+}
+
+/* ====  Medium  ==== */
+
+
+/* ====  Large  ==== */
+
+
+
+
+
+
