...edit typo with adding background image 'title'

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -12,7 +12,7 @@
 /* ==  BACKGROUNDS  == */
 
 .title {
-    background-image: url(./assets/images/pattern.webp);
+    background-image: url(../images/pattern.webp);
 }
 
 
