...edit width/alignment 'page-container'

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -61,11 +61,19 @@
 
 /* ====  Widths  ==== */
 
+.page-container {
+    width: 95%;
+}
+
 .title {
     width: 100%;
 }
 
 /* ====  Alignments  ==== */
+
+.page-container {
+    margin: 0 auto;;
+}
 
 .title {
     text-align: center;
