...edit position 'page-container'

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -79,6 +79,13 @@
     text-align: center;
 }
 
+/* ====  Positions  ==== */
+
+.page-container {
+    position: relative;
+    top: 1.5rem;
+}
+
 
 /* ==  VIEWPORTS  == */
 
