--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -79,7 +79,7 @@
     text-align: center;
 }
 
-/* ====  Positions  ==== */
+/* ====  Positionings  ==== */
 
 .page-container {
     position: relative;
