--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -23,6 +23,24 @@
     color: khaki;
 }
 
+.brushes h2,
+.frames h2,
+.paint h2 {
+    color: white;
+}
+
+.brushes h2 {
+    background-color: mediumspringgreen;
+}
+
+.frames h2 {
+    background-color: lightcoral;
+}
+
+.paint h2 {
+    background-color: skyblue;
+}
+
 
 
 
