--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -92,6 +92,14 @@
     justify-content: center;
 }
 
+.brushes h2,
+.frames h2,
+.paint h2 {
+    display: flex;
+    align-items: center;
+}
+
+
 /* ====  Positionings  ==== */
 
 .page-container {
@@ -134,6 +142,12 @@
     .frames,
     .paint {
         height: 15rem;
+    }
+
+    .brushes h2,
+    .frames h2,
+    .paint h2 {
+        height: 3rem;
     }
 
 }
