--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -99,7 +99,6 @@
     align-items: center;
 }
 
-
 /* ====  Positionings  ==== */
 
 .page-container {
@@ -107,6 +106,11 @@
     top: 1.5rem;
 }
 
+/* ====  Margins  ==== */
+
+.title {
+    margin-bottom: 5rem;
+}
 
 /* ==  VIEWPORTS  == */
 
