--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -61,6 +61,13 @@
     font-weight: bold;
 }
 
+.brushes h3,
+.frames h3,
+.paint h3 {
+    font-weight: bold;
+}
+
+
 
 /* ==  LAYOUT  == */
 
@@ -111,6 +118,7 @@
 .title {
     margin-bottom: 5rem;
 }
+
 
 /* ==  VIEWPORTS  == */
 
