...remove old height from section classes

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -101,7 +101,7 @@
 .section-container {
     display: flex;
     flex-direction: column;
-    
+    justify-content: space-around;
 }
 
 .brushes h2,
@@ -163,11 +163,17 @@
         height: 5rem;
     }
 
+    .section-container {
+        height: 20rem;
+    }
+    /*
     .brushes,
     .frames,
     .paint {
         height: 25rem;
     }
+    */
+}
 
     .brushes h2,
     .frames h2,
@@ -212,17 +218,6 @@
         height: 15rem;
     }
 
-    .section-container {
-        height: 15rem;
-    }
-    /*
-    .brushes,
-    .frames,
-    .paint {
-        height: 15rem;
-    }
-    */
-}
 
 /* ==  DEBUGGING  == */
 
