...comment out h3 padding

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -119,13 +119,13 @@
 }
 
 /* ====  Paddings  ==== */
-
+/*
 .brushes h3,
 .frames h3,
 .paint h3 {
     padding-bottom: 1.5rem;
 }
-
+*/
 /* ====  Margins  ==== */
 
 .title {
