--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -40,6 +40,10 @@
     background-color: skyblue;
 }
 
+span {
+    color: blue;
+}
+
 
 /* ==  FONTS  == */
 
@@ -66,6 +70,11 @@
 .paint h3 {
     font-weight: bold;
 }
+
+span {
+    font-weight: bold;
+}
+
 
 
 /* ==  LAYOUT  == */
@@ -159,7 +168,8 @@
         font-size: 1.5rem;
     }
 
-    p {
+    p,
+    span {
         font-size: 1.25rem;
     }
 
@@ -206,7 +216,8 @@
         font-size: 2rem;
     }
 
-    p {
+    p,
+    span {
         font-size: 2rem;
     }
 
